// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TAG COMPONENT > should render 1`] = `
<DocumentFragment>
  <a
    href="tagLink"
  >
    <div
      class="_tag_f783ef _tag-common_f783ef"
    >
      tagName
    </div>
  </a>
</DocumentFragment>
`;

exports[`TAGSET COMPONENT > should render 1`] = `
<DocumentFragment>
  <div
    class="undefined _tagSet_f783ef"
  >
    <a
      href="tagLink"
    >
      <div
        class="_tag_f783ef _tag-common_f783ef"
      >
        tagName
      </div>
    </a>
  </div>
</DocumentFragment>
`;
